[project]
name = "ezmsg"
version = "3.6.2"
description = "A simple DAG-based computation model"
authors = [
  { name = "Griffin Milsap", email = "griffin.milsap@gmail.com" },
  { name = "Preston Peranich", email = "pperanich@gmail.com" },
  { name = "Chadwick Boulay", email = "chadwick.boulay@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
requires-python = ">=3.10.15"
dependencies = [
    "array-api-compat>=1.12.0",
    "typing-extensions>=4.14.1",
]

[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"},
  "pre-commit>=4.3.0",
  "viztracer>=1.0.4",
]
lint = [
    "flake8>=7.3.0",
    "ruff>=0.12.9",
]
test = [
    "numpy>=2.2.6",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "xarray>=2025.6.1",
    "psutil>=7.1.0",
]
docs = [
  {include-group = "axisarray"},
  "sphinx>=8.1.3",
  "pydata-sphinx-theme",
  "sphinxext.rediraffe",
  "sphinx_autodoc_typehints>=3.0.0",
  "sphinx_copybutton",
  "sphinx_design",
]
axisarray = [
    "numpy>=2.2.6",
]

[project.scripts]
ezmsg = "ezmsg.core.command:cmdline"
ezmsg-perf = "ezmsg.util.perf.command:command"

[project.optional-dependencies]
axisarray = [
    "numpy>=2.2.6",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src", "tests"]
testpaths = "tests"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ezmsg"]
