[metadata]
name = ezmsg
version = 3.1.1
author = Griffin Milsap
author_email = griffin.milsap@gmail.com
description = A simple DAG-based computation model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iscoe/ezmsg
classifiers = 
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = >=3.8

[options.extras_require]
all_ext =
    ezmsg-websocket
    ezmsg-sigproc
    ezmsg-zmq

test =
    pytest
    pytest-asyncio
    pytest-cov
    numpy
