[metadata]
name = ezmsg-sigproc
version = 1.1.0
author = Griffin Milsap
author_email = griffin.milsap@jhuapl.edu
description = Timeseries signal processing implementations in ezmsg
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iscoe/ezmsg
license_files = LICENSE.txt
classifiers = 
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires = 
    ezmsg>=2.1.0
    numpy>=1.19.5
    scipy>=1.6.3

[options.extras_require]
test =
    pytest
    pytest-cov

