[tool.poetry]
name = "ezmsg-websocket"
version = "1.1.2"
description = "Websocket server and client units for ezmsg"
authors = [
  "Milsap, Griffin <griffin.milsap@gmail.com>",
  "Peranich, Preston <pperanich@gmail.com>",
]
license = "MIT"
readme = "README.md"
packages = [{ include = "ezmsg", from = "src" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
ezmsg = "^3.3.0"
websockets = "^8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
