[metadata]
name = ezmsg-zmq
version = 1.0.0
author = Preston Peranich
author_email = pperanich@gmail.com
description = ZeroMQ units for ezmsg
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.jhuapl.edu/milsagw1/ezmsg
license_files = LICENSE.txt
classifiers = 
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires = 
    ezmsg>=2.1.0
    pyzmq>=22.2.1

[options.extras_require]
test =
    pytest
    pytest-cov

